--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Intro.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* Keyframes for left-to-right movement */
+@keyframes moveRight {
+  from {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Keyframes for scale-up animation */
+@keyframes scaleUp {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.1);
+  }
+}
+
+/* Apply move-right animation */
+.moveRight {
+  animation: moveRight 1s ease-out;
+}
+
+/* Apply scale-up animation */
+.scaleUp {
+  animation: scaleUp 0.5s ease-in-out;
+}
+
+/* Adjust button scale-up animation with hover effect */
+.scaleUp:hover {
+  animation: scaleUp 0.3s ease-in-out;
+}
+.nav-link {
+  position: relative;
+  text-decoration: none;
+}
+
+.nav-link::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px; /* Thicker underline */
+  background-color: #6b46c1; /* Purple color for underline, matches Tailwind's purple-600 */
+  bottom: 0;
+  left: 50%;
+  transition: width 0.4s ease, left 0.4s ease;
+}
+
+.nav-link:hover::before {
+  width: 100%;
+  left: 0;
+}
+
+
+@media (max-width: 700px) {
+  .socialNav{
+    display: none;
+  }
+  .footerContainer{
+    flex-direction: column;
+  }
+  .footerP{
+    margin: 0;
+  }
+ 
 }
